Settings Component and Minor Changes to the index, manifest

--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="The Initiative to Become The King of your Time, The name 'Time Shaasan' is inspired by hindi word 'Shaasan/शासन' which means Rule. Time Shaasan Aims to Allow it's users to Control/Organize there time Effectively with many inbuilt Features. for Personal and Professional use."
+      content="TimeShaasan Aims to Allow it's users to Control/Organize there time Effectively with many inbuilt Features. for Personal and Professional use."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
